feat: 自定义静态资源目录

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
 server.error.whitelabel.enabled=false
+#spring.mvc.static-path-pattern=/content/**
+#spring.web.resources.static-locations=classpath:/files/
