--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,10 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.location=classpath:/public/
 
-spring.jpa.database=h2
+#spring.jpa.database=h2
+
+## database
+spring.datasource.url=jdbc:mysql://localhost:3306/boot_all?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=boot
+spring.datasource.password=123456
