--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/boot_all?useUnicode=true&chara
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=boot
 spring.datasource.password=123456
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
