feat: 利用BatchSize注解解决N+1问题的测试

--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -21,3 +21,9 @@ spring.datasource.hikari.autoCommit=true
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 logging.level.com.zaxxer.hikari=TRACE
 logging.level.com.zaxxer.hikari.pool.HikariPool=DEBUG
+## ??N+1, ????, ??-1, ??????sql(N?1????)
+spring.jpa.properties.hibernate.default_batch_fetch_size=20
+
+logging.level.org.hibernate.SQL=debug
+spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
